Changed drop method signature

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -248,7 +248,7 @@
    ],
    "source": [
     "# Normalize Features\n",
-    "features_df = df.drop(columns=['ppg'])\n",
+    "features_df = df.drop(columns='ppg')\n",
     "features_df_norm = (features_df - features_df.mean()) / features_df.std()\n",
     "\n",
     "# Asserts features are normalized\n",
