Added tf placholders to jnb

--- a/NeuralNetwork/tensorflow_simplilearn.ipynb
+++ b/NeuralNetwork/tensorflow_simplilearn.ipynb
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"add_1:0\", dtype=float32)\n"
+      "Tensor(\"add_2:0\", dtype=float32)\n"
      ]
     }
    ],
@@ -79,6 +79,34 @@
     "\n",
     "linear_model = W * x + b\n",
     "print(linear_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Placeholders allow us to feed data to our Tensorflow model from outside a model - it permits a value to be assigned later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = tf.placeholder(tf.float32)\n",
+    "d = c * 2\n",
+    "with tf.Session() as sess:\n",
+    "    result = sess.run(d, feed_dict={c: 3.0})\n",
+    "print(result)"
    ]
   },
   {
